--- a/prometheus.yml
+++ b/prometheus.yml
@@ -29,5 +29,11 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
   - job_name: "nacos"
+    relabel_configs:
+      - source_labels: [__meta_contextPath]
+        target_label: __metrics_path__
+        regex: '(.*)'
+        replacement: $1/actuator/prometheus
+    #metrics_path: '/actuator/prometheus'
     http_sd_configs:
     - url: http://172.16.10.75:8848/nacos/prometheus
